--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "fastmcp (>=2.7.0,<3.0.0)", 
     "httpx (>=0.28.1,<0.29.0)", 
     "uvicorn (>=0.34.3,<0.35.0)", 
-    "fastapi (>=0.115.12,<0.116.0)"
+    "fastapi (>=0.115.12,<0.116.0)", 
+    "pyyaml (>=6.0.2,<7.0.0)"
 ]
 
 [project.urls]
